--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <!-- Navbar Section -->
+    <!-- Navbar Section Swarup -->
 
     <header class="header" id="header">
         <nav class="nav_container">
@@ -62,37 +62,37 @@
         </nav>
     </header>
 
-    <!-- Home Section  -->
+    <!-- Home Section Haripriya  -->
 
     <section style="height: 900px;" id="home">
         <h5>Home</h5>
     </section>
 
-    <!-- About Yoga Section -->
+    <!-- About Yoga Section Haripriya -->
 
     <section style="height: 900px;" id="about">
         <h5>About Yoga</h5>
     </section>
 
-    <!-- Yogas Section -->
+    <!-- Yogas Section Satyam -->
 
     <section style="height: 900px;" id="yogas">
         <h5>Yogas</h5>
     </section>
 
-    <!-- Yoga Features-->
+    <!-- Yoga Features Shivangi-->
 
     <section style="height: 900px;" id="features">
         <h5>Yoga Features</h5>
     </section>
 
-    <!-- Gallery Section  -->
+    <!-- Gallery Section Shivangi  -->
 
     <section style="height: 900px;" id="gallery">
         <h5>Gallery</h5>
     </section>
 
-    <!-- Contact Us Section  -->
+    <!-- Contact Us Section Swarup  -->
 
     <section style="height: 900px;" id="contact">
         <h5>Contact Us</h5>
