--- a/index.html
+++ b/index.html
@@ -64,37 +64,37 @@
 
     <!-- Home Section Haripriya  -->
 
-    <section style="height: 900px;" id="home">
+    <section id="home">
         <h5>Home</h5>
     </section>
 
     <!-- About Yoga Section Haripriya -->
 
-    <section style="height: 900px;" id="about">
+    <section id="about">
         <h5>About Yoga</h5>
     </section>
 
     <!-- Yogas Section Satyam -->
 
-    <section style="height: 900px;" id="yogas">
+    <section id="yogas">
         <h5>Yogas</h5>
     </section>
 
     <!-- Yoga Features Shivangi-->
 
-    <section style="height: 900px;" id="features">
+    <section id="features">
         <h5>Yoga Features</h5>
     </section>
 
     <!-- Gallery Section Shivangi  -->
 
-    <section style="height: 900px;" id="gallery">
+    <section id="gallery">
         <h5>Gallery</h5>
     </section>
 
     <!-- Contact Us Section Swarup  -->
 
-    <section style="height: 900px;" id="contact">
+    <section id="contact">
         <h5>Contact Us</h5>
     </section>
 
