--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
     <!-- Home Section Haripriya  -->
 
-    <section id="home">
+    <section id="home" >
         <h5>Home</h5>
     </section>
 
@@ -95,7 +95,54 @@
     <!-- Contact Us Section Swarup  -->
 
     <section id="contact">
-        <h5>Contact Us</h5>
+        <h2 class="section__title">Take A Coffee & Connect Us</h2>
+
+        <div class="contact_section">
+
+
+            <form action="" class="contact__form grid">
+                <div class="contact__inputs grid">
+                    <div class="contact__content">
+                        <input type="text" size="50" class="contact__input" placeholder="Your Name">
+                    </div>
+                    <div class="contact__content">
+                        <input type="email" size="50" class="contact__input" placeholder="Email">
+                    </div>
+                </div>
+                <div class="contact__content">
+                    <textarea name="" id="" rows="4" cols="49" class="contact__input" placeholder="Message"></textarea>
+                </div>
+
+                <div>
+                    <button class="btn">Send</button>
+                </div>
+            </form>
+
+        </div>
+
+
+        <footer class="footer">
+            <div class="footer__bg">
+                <div class="footer__container container grid">
+
+                    <a href="#home" class="footer__link">Home</a>
+
+                    <a href="#about" class="footer__link">About</a>
+
+                    <a href="#yogas" class="footer__link">Yogas</a>
+
+                    <a href="#features" class="footer__link">Yoga Features</a>
+
+                    <a href="#gallery" class="footer__link">Gallery</a>
+
+
+                    <a href="#contact" class="footer__link">Contact Us</a>
+
+                </div>
+                <p class="footer__copy">&#169;All right reserved</p>
+
+            </div>
+        </footer>
     </section>
 
 </body>
