--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat&family=Sacramento&display=swap"
         rel="stylesheet">
     <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <title>Yoga App</title>
 </head>
 
@@ -125,18 +126,23 @@
             <div class="footer__bg">
                 <div class="footer__container container grid">
 
-                    <a href="#home" class="footer__link">Home</a>
+                    <!-- <a href="#home" class="footer__link">Home</a> -->
+                    <i class="uil uil-linkedin footer__link"></i>
 
-                    <a href="#about" class="footer__link">About</a>
+                    <!-- <a href="#about" class="footer__link">About</a> -->
+                    <i class="uil uil-github footer__link"></i>
 
-                    <a href="#yogas" class="footer__link">Yogas</a>
+                    <!-- <a href="#yogas" class="footer__link">Yogas</a> -->
+                    <i class="uil uil-instagram footer__link"></i>
 
-                    <a href="#features" class="footer__link">Yoga Features</a>
+                    <!-- <a href="#features" class="footer__link">Yoga Features</a> -->
+                    <i class="uil uil-facebook"></i>
 
-                    <a href="#gallery" class="footer__link">Gallery</a>
+                    <!-- <a href="#gallery" class="footer__link">Gallery</a> -->
+                    <i class="uil uil-twitter"></i>
 
 
-                    <a href="#contact" class="footer__link">Contact Us</a>
+                    <!-- <a href="#contact" class="footer__link">Contact Us</a> -->
 
                 </div>
                 <p class="footer__copy">&#169;All right reserved</p>
