--- a/index.html
+++ b/index.html
@@ -84,7 +84,10 @@
     <!-- Yoga Features Shivangi-->
 
     <section id="features">
-        <h5>Yoga Features</h5>
+       <!-- <h5>Yoga Features</h5>..................................................... -->
+       <div class=""></div>
+
+
     </section>
 
     <!-- Gallery Section Shivangi  -->
